--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,7 @@ input[type="submit"],input[type="checkbox"]{
 </style>
 	<title>HS Smart Connecter (By Azim Atefi)</title>
 	<script type="text/javascript"  language="javascript" src="popup.js" charset="utf-8"></script>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body onload="initialize()">
 		<div id="formdiv">
